# ViewStage

./: .gitattributes  .gitignore  AGENTS.md  DBNET_INTEGRATION.md  README.md  build-wasm.ps1
.github/workflows/: rust.yml
src/: batch-draw.js  blackboard-page.js  blackboard.js  history.js  i18n.js  index.html  init.js  main.js  oobe.css  oobe.html  oobe.js  pen_tessellator.js  settings.css  settings.html  settings.js  splashscreen.html  styles.css  tile-renderer.js  wasm-processor.js
src-tauri/: Cargo.toml  tauri.conf.compat.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: image_processing.rs  lib.rs  main.rs
src-tauri/src/gpu/: context.rs  denoise.rs
src/JS/: mammoth.browser.min.js
src/doc-scan/: doc-scan.css  doc-scan.js
src/locales/: en-US.json  zh-CN.json  zh-TW.json
src/modules/pdf/: document_loader.js  document_reader.js  document_reader_page.js
src/themes/: theme.js
src/themes/com.viewstage.theme.dark/: theme.css
src/themes/com.viewstage.theme.simplify/: theme.css
src/themes/dark/: settings.css  theme.css  theme.js  theme.json
src/themes/simplify/: settings.css  theme.css  theme.js  theme.json
wasm-viewstage/: Cargo.toml
wasm-viewstage/src/: lib.rs
