[package]
name = "viewstage"
version = "0.10.0"
description = "An application for video presentation and document annotation"
authors = ["ospneam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "viewstage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
image = "0.25"
imageproc = "0.24"
base64 = "0.22"
rayon = "1.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2"
futures = "0.3"
log = "0.4"
simplelog = "0.12"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
tract-onnx = "0.21"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
opencv = { version = "0.98", features = ["dnn", "imgproc", "photo"], default-features = false }

